Fixed side panel styling (padding and overflow)

--- a/src/Components/ProjectQuerySidePanel.scss
+++ b/src/Components/ProjectQuerySidePanel.scss
@@ -1,3 +1,4 @@
 .innerContainer {
     padding: 1rem;
+    overflow-y: auto;
 }
